2003-05-13  Gray Watson  <gray@outside.256.com>

	* Deprecated log-blocks and heap-check-map debug tokens.

	* Removed dmalloc_lp.[ch] stuff.

	* Added -M --memory-limit argument to dmalloc and ability to limit
	the library from allocating more than a certain number of bytes.

	* Getting ready for a huge checkin after a good bunch of work.

2002-06-06  Gray Watson  <gray@outside.256.com>

	* Added a currently in use stats to log-stats.  Thanks Bernard.

2002-02-27  Gray Watson  <gray@outside.256.com>

	* Fixed some literal ranlib entries in the Makefile.in thanks to
	Ralf Fassel.

2002-02-24  Gray Watson  <gray@outside.256.com>

	* Removed the USE_DMALLOC_LEAP functionality.  This was causing
	pains internally and I needed to simplify some of the sections.  I
	apologize for those folks who used this a lot.

2002-02-14  Gray Watson  <gray@outside.256.com>

	* Added a function to close and re-open the dmalloc logfile when
	you process a new set of environmental flags.

	* Added a section to the docs about debugging daemon and CGI
	processes.

2002-01-28  Gray Watson  <gray@outside.256.com>

	* Made some cosmetic improvements to the configure.in script.

2001-11-30  Gray Watson  <gray@outside.256.com>

	* Made free(0L) not an error by default.  I've been swayed by
	public pressure.

	* Removed short token support.

	* Did some more work on testing and chunk.c changes.

2001-07-18  Gray Watson  <gray@outside.256.com>

	* Added better autoconf checking of thread libraries to include
	FreeBSD's non-portable libc_r.  Grrr.  Thanks to Steve Roberts.

2001-07-12  Gray Watson  <gray@outside.256.com>

	* Added dmalloc_debug_setup function with which you can set the
	options with a function and not just the environmental variable.

	* Finally got the main line compiling again.  Ugh.  Chunk code
	looks a lot better however.
	
	* Before this time I've changed significantly the way the chunk
	routines account for pointers.  Now every pointer has a flags