@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the DMalloc library.
-# $Id: Makefile.all.in,v 1.109 2003/05/13 16:38:43 gray Exp $
+# $Id: Makefile.all.in,v 1.110 2003/05/15 02:47:27 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -376,37 +376,36 @@ dmallocc.o : $(srcdir)/dmallocc.cc
 #
 
 arg_check.o: arg_check.c dmalloc.h conf.h settings.h chunk.h \
- debug_val.h dmalloc_loc.h error.h arg_check.h
+ debug_tok.h dmalloc_loc.h error.h arg_check.h
 chunk.o: chunk.c conf.h settings.h dmalloc.h chunk.h chunk_loc.h \
- dmalloc_loc.h compat.h debug_val.h dmalloc_tab.h error.h error_val.h \
+ dmalloc_loc.h compat.h debug_tok.h dmalloc_tab.h error.h error_val.h \
  heap.h protect.h
 compat.o: compat.c dmalloc.h conf.h settings.h compat.h dmalloc_loc.h
 dmalloc.o: dmalloc.c dmalloc_argv.h conf.h settings.h dmalloc.h \
- compat.h debug_tok.h dmalloc_loc.h debug_val.h env.h error_val.h \
- version.h
+ compat.h debug_tok.h dmalloc_loc.h env.h error_val.h version.h
 dmalloc_argv.o: dmalloc_argv.c conf.h settings.h dmalloc_argv.h \
  dmalloc_argv_loc.h compat.h
 dmalloc_t.o: dmalloc_t.c conf.h settings.h dmalloc_argv.h dmalloc.h \
- debug_val.h dmalloc_loc.h error_val.h
+ debug_tok.h dmalloc_loc.h error_val.h
 dmalloc_tab.o: dmalloc_tab.c conf.h settings.h chunk.h compat.h \
  dmalloc.h dmalloc_loc.h error.h error_val.h dmalloc_tab.h \
  dmalloc_tab_loc.h
 env.o: env.c conf.h settings.h dmalloc.h compat.h dmalloc_loc.h \
- debug_tok.h debug_val.h env.h error.h
-error.o: error.c conf.h settings.h dmalloc.h compat.h debug_val.h \
+ debug_tok.h env.h error.h
+error.o: error.c conf.h settings.h dmalloc.h compat.h debug_tok.h \
  dmalloc_loc.h env.h error.h error_val.h version.h
 heap.o: heap.c dmalloc.h conf.h settings.h chunk.h compat.h \
- debug_val.h dmalloc_loc.h error.h error_val.h heap.h
+ debug_tok.h dmalloc_loc.h error.h error_val.h heap.h
 malloc.o: malloc.c conf.h settings.h dmalloc.h chunk.h compat.h \
- debug_val.h dmalloc_loc.h env.h error.h error_val.h heap.h \
+ debug_tok.h dmalloc_loc.h env.h error.h error_val.h heap.h \
  malloc_funcs.h return.h
 protect.o: protect.c conf.h settings.h dmalloc.h dmalloc_loc.h error.h \
  heap.h protect.h
 chunk_th.o: chunk.c conf.h settings.h dmalloc.h chunk.h chunk_loc.h \
- dmalloc_loc.h compat.h debug_val.h dmalloc_tab.h error.h error_val.h \
+ dmalloc_loc.h compat.h debug_tok.h dmalloc_tab.h error.h error_val.h \
  heap.h protect.h
-error_th.o: error.c conf.h settings.h dmalloc.h compat.h debug_val.h \
+error_th.o: error.c conf.h settings.h dmalloc.h compat.h debug_tok.h \
  dmalloc_loc.h env.h error.h error_val.h version.h
 malloc_th.o: malloc.c conf.h settings.h dmalloc.h chunk.h compat.h \
- debug_val.h dmalloc_loc.h env.h error.h error_val.h heap.h \
+ debug_tok.h dmalloc_loc.h env.h error.h error_val.h heap.h \
  malloc_funcs.h return.h
